# rust-aoc

./: .gitignore  Cargo.toml  README.md  aoc-new.sh
src/2015/day1/: main.rs
src/2015/day10/: main.rs
src/2015/day11/: main.rs
src/2015/day12/: main.rs
src/2015/day13/: main.rs
src/2015/day14/: main.rs
src/2015/day15/: main.rs
src/2015/day16/: main.rs
src/2015/day17/: main.rs
src/2015/day18/: main.rs
src/2015/day19/: main.rs
src/2015/day2/: main.rs
src/2015/day3/: main.rs
src/2015/day4/: main.rs
src/2015/day5/: main.rs
src/2015/day6/: main.rs
src/2015/day7/: main.rs
src/2015/day8/: input  main.rs
src/2015/day9/: main.rs
src/templates/: main.rs
