[package]
name = "aoc"
version = "0.1.0"
authors = ["f0rget <f0rget@pm.me>"]
edition = "2018"

[dependencies]
md-5 = "0.9.1"

[[bin]]
name = "2015day1"
path = "src/2015/day1/main.rs"

[[bin]]
name = "2015day2"
path = "src/2015/day2/main.rs"

[[bin]]
name = "2015day3"
path = "src/2015/day3/main.rs"

[[bin]]
name = "2015day4"
path = "src/2015/day4/main.rs"

[[bin]]
name = "2015day5"
path = "src/2015/day5/main.rs"

[[bin]]
name = "2015day6"
path = "src/2015/day6/main.rs"
