[package]
name = "aoc"
version = "0.1.0"
authors = ["f0rget <f0rget@pm.me>"]
edition = "2018"

[dependencies]
md-5 = "0.9.1"
regex = "1"
itertools = "0.9.0"
serde_json = "1.0.57"

[[bin]]
name = "2015day1"
path = "src/2015/day1/main.rs"

[[bin]]
name = "2015day2"
path = "src/2015/day2/main.rs"

[[bin]]
name = "2015day3"
path = "src/2015/day3/main.rs"

[[bin]]
name = "2015day4"
path = "src/2015/day4/main.rs"

[[bin]]
name = "2015day5"
path = "src/2015/day5/main.rs"

[[bin]]
name = "2015day6"
path = "src/2015/day6/main.rs"

[[bin]]
name = "2015day7"
path = "src/2015/day7/main.rs"
[[bin]]
name = "2015day8"
path = "src/2015/day8/main.rs"
[[bin]]
name = "2015day9"
path = "src/2015/day9/main.rs"
[[bin]]
name = "2015day10"
path = "src/2015/day10/main.rs"
[[bin]]
name = "2015day11"
path = "src/2015/day11/main.rs"
[[bin]]
name = "2015day12"
path = "src/2015/day12/main.rs"
[[bin]]
name = "2015day13"
path = "src/2015/day13/main.rs"
[[bin]]
name = "2015day14"
path = "src/2015/day14/main.rs"
[[bin]]
name = "2015day15"
path = "src/2015/day15/main.rs"
[[bin]]
name = "2015day16"
path = "src/2015/day16/main.rs"
[[bin]]
name = "2015day17"
path = "src/2015/day17/main.rs"
